grama/ParLatte.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParLatte where
import qualified AbsLatte
import LexLatte
}

%name pProgram Program
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  '*' { PT _ (TS _ 7) }
  '+' { PT _ (TS _ 8) }
  '++' { PT _ (TS _ 9) }
  ',' { PT _ (TS _ 10) }
  '-' { PT _ (TS _ 11) }
  '--' { PT _ (TS _ 12) }
  '/' { PT _ (TS _ 13) }
  ';' { PT _ (TS _ 14) }
  '<' { PT _ (TS _ 15) }
  '<=' { PT _ (TS _ 16) }
  '=' { PT _ (TS _ 17) }
  '==' { PT _ (TS _ 18) }
  '>' { PT _ (TS _ 19) }
  '>=' { PT _ (TS _ 20) }
  'boolean' { PT _ (TS _ 21) }
  'else' { PT _ (TS _ 22) }
  'false' { PT _ (TS _ 23) }
  'if' { PT _ (TS _ 24) }
  'int' { PT _ (TS _ 25) }
  'return' { PT _ (TS _ 26) }
  'string' { PT _ (TS _ 27) }
  'true' { PT _ (TS _ 28) }
  'void' { PT _ (TS _ 29) }
  'while' { PT _ (TS _ 30) }
  '{' { PT _ (TS _ 31) }
  '||' { PT _ (TS _ 32) }
  '}' { PT _ (TS _ 33) }
  L_Ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident :: { AbsLatte.Ident}
Ident  : L_Ident { AbsLatte.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { AbsLatte.Program }
Program : ListTopDef { AbsLatte.Program $1 }

TopDef :: { AbsLatte.TopDef }
TopDef : Type Ident '(' ListArg ')' Block { AbsLatte.FnDef $1 $2 $4 $6 }

ListTopDef :: { [AbsLatte.TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }

Arg :: { AbsLatte.Arg }
Arg : Type Ident { AbsLatte.Arg $1 $2 }

ListArg :: { [AbsLatte.Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }

Block :: { AbsLatte.Block }
Block : '{' ListStmt '}' { AbsLatte.Block $2 }

ListStmt :: { [AbsLatte.Stmt] }
ListStmt : {- empty -} { [] } | Stmt ListStmt { (:) $1 $2 }

Stmt :: { AbsLatte.Stmt }
Stmt : ';' { AbsLatte.Empty }
     | Block { AbsLatte.BStmt $1 }
     | Type ListItem ';' { AbsLatte.Decl $1 $2 }
     | Ident '=' Expr ';' { AbsLatte.Ass $1 $3 }
     | Ident '++' ';' { AbsLatte.Incr $1 }
     | Ident '--' ';' { AbsLatte.Decr $1 }
     | 'return' Expr ';' { AbsLatte.Ret $2 }
     | 'return' ';' { AbsLatte.VRet }
     | 'if' '(' Expr ')' Stmt { AbsLatte.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { AbsLatte.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { AbsLatte.While $3 $5 }
     | Expr ';' { AbsLatte.SExp $1 }

Item :: { AbsLatte.Item }
Item : Ident { AbsLatte.NoInit $1 }
     | Ident '=' Expr { AbsLatte.Init $1 $3 }

ListItem :: { [AbsLatte.Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }

Type :: { AbsLatte.Type }
Type : 'int' { AbsLatte.Int }
     | 'string' { AbsLatte.Str }
     | 'boolean' { AbsLatte.Bool }
     | 'void' { AbsLatte.Void }

ListType :: { [AbsLatte.Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }

Expr6 :: { AbsLatte.Expr }
Expr6 : Ident { AbsLatte.EVar $1 }
      | Integer { AbsLatte.ELitInt $1 }
      | 'true' { AbsLatte.ELitTrue }
      | 'false' { AbsLatte.ELitFalse }
      | Ident '(' ListExpr ')' { AbsLatte.EApp $1 $3 }
      | String { AbsLatte.EString $1 }
      | '(' Expr ')' { $2 }

Expr5 :: { AbsLatte.Expr }
Expr5 : '-' Expr6 { AbsLatte.Neg $2 }
      | '!' Expr6 { AbsLatte.Not $2 }
      | Expr6 { $1 }

Expr4 :: { AbsLatte.Expr }
Expr4 : Expr4 MulOp Expr5 { AbsLatte.EMul $1 $2 $3 } | Expr5 { $1 }

Expr3 :: { AbsLatte.Expr }
Expr3 : Expr3 AddOp Expr4 { AbsLatte.EAdd $1 $2 $3 } | Expr4 { $1 }

Expr2 :: { AbsLatte.Expr }
Expr2 : Expr2 RelOp Expr3 { AbsLatte.ERel $1 $2 $3 } | Expr3 { $1 }

Expr1 :: { AbsLatte.Expr }
Expr1 : Expr2 '&&' Expr1 { AbsLatte.EAnd $1 $3 } | Expr2 { $1 }

Expr :: { AbsLatte.Expr }
Expr : Expr1 '||' Expr { AbsLatte.EOr $1 $3 } | Expr1 { $1 }

ListExpr :: { [AbsLatte.Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }

AddOp :: { AbsLatte.AddOp }
AddOp : '+' { AbsLatte.Plus } | '-' { AbsLatte.Minus }

MulOp :: { AbsLatte.MulOp }
MulOp : '*' { AbsLatte.Times }
      | '/' { AbsLatte.Div }
      | '%' { AbsLatte.Mod }

RelOp :: { AbsLatte.RelOp }
RelOp : '<' { AbsLatte.LTH }
      | '<=' { AbsLatte.LE }
      | '>' { AbsLatte.GTH }
      | '>=' { AbsLatte.GE }
      | '==' { AbsLatte.EQU }
      | '!=' { AbsLatte.NE }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
